sort keys in debug

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libc = { version = "0.2", features = ["align"] }
+libc = "0.2"
+itertools = "0.12"
